# borsen_stockgame_project

./: .gitignore  pyproject.toml  run_borsen_project.sh
stockgame_project/: fill_db.py  status_of_winners.txt  stockgame.py  winners.json
stockgame_project/db/: setup_db.sql
stockgame_project/scripts/: index.html  stock_array.py  stockgame.py  stockgame_functions.py
stockgame_project/scripts/utils/: __init__.py  stockgame_functions.py
stockgame_project/utils/: stock_array.py  stockgame_functions.py  winners.json
